@@ -1,3 +1,10 @@
+2012-04-12  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	(download-openjdk): Fix syntax.
+	(download-cacao): Likewise.
+	(download-jamvm): Likewise.
+
 2012-04-11  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
